After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755654 - mmc/sd drive does not appear in Nautilus
mmc/sd drive does not appear in Nautilus
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 755646 758084 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-09-26 06:41 UTC by porjo38
Modified: 2015-11-13 23:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Output of "gvfs-mount -li" (3.94 KB, text/plain)
2015-09-26 13:05 UTC, porjo38
  Details
Output of "udiskctl dump" (31.05 KB, text/plain)
2015-09-26 13:05 UTC, porjo38
  Details
gtkplacessidebar: Show drives with removable media (1023 bytes, patch)
2015-09-27 15:03 UTC, Ross Lagerwall
committed Details | Review
USB and MMC attached and mounted (108.20 KB, image/png)
2015-10-09 20:26 UTC, Theodor van Nahl
  Details
Top: USB and MMC attached; Bottom: USB removed. (223.65 KB, image/png)
2015-10-09 20:28 UTC, Theodor van Nahl
  Details

Description porjo38 2015-09-26 06:41:51 UTC
After inserting an SD card in the MMC/SD card reader, a Gnome Files window pops up showing the contents of the SD card. The problem is the drive is not listed anywhere within the Files window, which makes it difficult to find again after you've navigated away from it. The drive does not appear on the left hand side or under 'Other Locations'.

For normal USB flash drives, this is not a problem as the drive appears on the left hand side. MMC/SD card drives should appear on the left hand side of the Files window also.

Additional info:

The following is output from dmesg to clarify what kind of device I mean when I say 'MMC/SD card reader':


[    2.224086] mmc0: SDHCI controller on PCI [0000:04:00.0] using DMA
[  369.608008] mmc0: error -110 whilst initialising SD card
[  369.732100] mmc0: new high speed SDHC card at address aaaa
[  369.752218] mmcblk0: mmc0:aaaa SU16G 14.8 GiB 
[  369.753726]  mmcblk0: p1


And output from the 'mount' command:

/dev/mmcblk0p1 on /run/media/xxxx/NIKON D51001 type vfat (rw,nosuid,nodev,relatime,uid=1000,gid=1000,fmask=0022,dmask=0022,codepage=437,iocharset=ascii,shortname=mixed,showexec,utf8,flush,errors=remount-ro,uhelper=udisks2)
Comment 1 porjo38 2015-09-26 06:42:26 UTC
I'm using Nautilus / Files 3.18.0 with Fedora 23
Comment 2 Ross Lagerwall 2015-09-26 09:20:22 UTC
Can you attach the output of "gvfs-mount -li" and "udiskctl dump"?

Thanks
Comment 3 porjo38 2015-09-26 13:05:02 UTC
Created attachment 312201 [details]
Output of "gvfs-mount -li"
Comment 4 porjo38 2015-09-26 13:05:33 UTC
Created attachment 312202 [details]
Output of "udiskctl dump"
Comment 5 Ross Lagerwall 2015-09-27 15:03:37 UTC
Created attachment 312240 [details] [review]
gtkplacessidebar: Show drives with removable media

Some drives have removable media that is not ejectable (e.g. a laptop's
SD card reader). Show volumes on these drives in the sidebar.
Comment 6 Theodor van Nahl 2015-10-09 20:26:28 UTC
Created attachment 312978 [details]
USB and MMC attached and mounted

I want to confirm this bug. On my Laptop external devices are not listed in the "other place" view. But when I, having a usb stick and a mcc attached (and gvfs mounted), remove the usb stick the mmc partitions are showing up. Every partition even is shown twice.

On the Top of the Image you can see that both devices are attatched and gvfs-mounted. On the bottom you see nautilus after unplugging the usb device.

I am currently running Gnome 3.18.0-1 on Arch Linux [testing]
Comment 7 Theodor van Nahl 2015-10-09 20:28:49 UTC
Created attachment 312979 [details]
Top: USB and MMC attached; Bottom: USB removed.
Comment 8 Peter 2015-10-12 10:07:17 UTC
I can confirm this behaviour. Mounted memory cards doesn't show up on the sidebar of Nautilus, if the card reader is connected through PCI-Express. Mounted USB flash drives are shown on the sidebar, also memory cards which are mounted by card readers which are connected through USB itself are visible.

The sidebar itself seems to be redrawn (it flickers), but nothing is changed after insertion of the card. The notification also don't work in this case.

Thanks for the patch above. Maybe I can try the patch posted above, I don't know if I have the time.


---------------------------------------------------------
Basically memory cards are not usable for novice users on all ThinkPads and other laptops, which use PCI-Express to connect the card reader. At least my X220 and T420 are affected.

If someone stumbles on this bug which is NOT familar with UNIX/Linux:
1. The memory card is mounted, don't remove it!
2. mount point is: /run/media/$USER/$FILESYSTEM_LABEL
3. you can navigate to this directory with the shell or Nautilus

Removing:
1. $ sync # just for safety
2. $ umount /run/media/$USER/$FILESYSTEM_LABEL
3. you can now remove the card safely from your card reader

Please don't remove the card without umounting it, you could damage your files/filesystem on the card.
Comment 9 Carlos Soriano 2015-10-12 11:07:25 UTC
Review of attachment 312240 [details] [review]:

Looks good
Comment 10 Peter 2015-10-12 13:47:35 UTC
I've applied that patch under Archlinux and it works :)

I didn't noticed any side-effects.
Comment 11 Carlos Soriano 2015-10-14 12:57:46 UTC
*** Bug 755646 has been marked as a duplicate of this bug. ***
Comment 12 Carlos Soriano 2015-10-14 12:58:56 UTC
*** Bug 756542 has been marked as a duplicate of this bug. ***
Comment 13 Ross Lagerwall 2015-10-14 16:46:15 UTC
Pushed to master as f2b848a5319987a3b45282058cd091b3e3152652 and gtk-3-18 as 40f5a35a69b9d1ffd0c29428d8bf6218d9a822ad. Thanks for the review.
Comment 14 Carlos Soriano 2015-11-13 23:13:50 UTC
*** Bug 758084 has been marked as a duplicate of this bug. ***